Fixing AlertService overlay attachment & formcontrol binding in chiplist

--- a/projects/demo/src/app/components/inupts/inputs.component.html
+++ b/projects/demo/src/app/components/inupts/inputs.component.html
@@ -93,13 +93,13 @@
       iconSuffix="hero:presentation-chart-line"
     >
 
-      @for (item of chips; track $index) {
+      <!-- @for (item of chips; track $index) {
       <tw-chip-item
         [label]="item.label"
         [image]="item.image"
         [isDeletable]="item.isDeletable"
       />
-      }
+      } -->
     </tw-chip-list>
 
   </div>
